# olio-harjoitukset25

./: .gitignore  README.md
viikkotehtavat/H1/: CMakeLists.txt  funktiot.cpp  funktiot.h  main.cpp
viikkotehtavat/H2a/: CMakeLists.txt  car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
viikkotehtavat/H2b/: CMakeLists.txt  car.cpp  car.h  main.cpp
viikkotehtavat/h3a/: CMakeLists.txt  Chef.cpp  Chef.h  ItalianChef.cpp  ItalianChef.h  main.cpp
viikkotehtavat/h3b/: Animal.cpp  Animal.h  CMakeLists.txt  Dog.cpp  Dog.h  main.cpp
