cmake_minimum_required(VERSION 3.16)

project(H2b LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(H2b main.cpp car.cpp car.h)

include(GNUInstallDirs)
install(TARGETS H2b
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
